"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2013-11-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-03:
	  Allow ebool declarations to implicitly attach attribute atomic.


2013-11-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-02:
	  Implemented why-analysis on atomic-nodes.
	  Querying why an atomic node is X is the same as querying
		why-not ~X, due to combinational behavior of atomics.  
	  previous commits: got atomic node update propagation working.
		Also able to print atomic updates with watch/watchall.


2013-10-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53-run-time-expressions-01:
	  footprint: language body pointers (PRS/CHP/RTE/SPEC) are now
		only allocated on-first-use by the middle-end.
		Binary object format updated to v.11.


2013-06-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-53:
	  vpi-prsim.cc: fix inconsistency where __advance_prsim failed
		to fast-forward prsim time in cases where no events
		are pending, or next event is beyond the advance time.


2013-04-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-52b:
	  Fix lexicographical compare of EventCause (no regression).


2012-12-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-52:
	  Moved around some lexer and AST symbol definitions to reduce
		cyclic dependencies, but ended up just declaring
		libhacktast as a convenience-only library, so it will
		no longer be installed (was private), 
		just merged into libhacktparsers.la.
		Built on x86_64-ubuntu-linux w/ gcc-4.6.3.


2012-10-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-51:
	  Renamed all .h C++ files to .hh to disambiguate.

