@@ -2,7 +2,8 @@
 
 include $(top_srcdir)/test/Make.test-head
 
-HACKT_PARSE_TEST_FAILURES =
+HACKT_PARSE_TEST_FAILURES = \
+	invariant-02 invariant-03
 
 HACKT_PARSE_TEST_WARNINGS =
 
@@ -14,7 +15,8 @@ HACKT_PARSE_TEST_PASSES = \
 	000 001 002 003 004 005 006 007 008 009 \
 	010 011 012 013 014 015 016 017 018 019 \
 	020 021 022 023 024 025 026 027 028 029 \
-	030 031 032 033 034
+	030 031 032 033 034 \
+	invariant-01
 
 srcdir_EXTRA_DIST +=
 
@@ -24,7 +26,8 @@ HACKT_CREATE_TEST_PASSES = \
 	020b 022b 026b 027b 029b \
 	000 002 003 004 006 \
 	012 014 015 017 018 \
-	020 022 026 027 029
+	020 022 026 027 029 \
+	invariant-01
 
 # expects warnings:
 # 020b
@@ -64,7 +67,8 @@ EMPTY_CFLAT_PRS_TESTS +=
 PRSIMRC_AUTOTRACE_DISABLE_HOOK = autotrace=0;
 
 HACKT_PRSIMRC_TEST_SCRIPTS_PASSES = \
-	000b
+	000b \
+	invariant-01
 
 HACKT_PRSIMRC_TEST_SCRIPTS_FAILURES =
 
