@@ -1,0 +1,170 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	60
+	3	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	4	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	5	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	6	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	7	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	8	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	9	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	10	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	11	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	12	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	13	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	14	##ADDR##	datatprf	0	#HEAD#	#TAIL#	21
+	15	##ADDR##	datadefn	0	#HEAD#	#TAIL#	69
+	16	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	17	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	18	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	19	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	20	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	21	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	22	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	23	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	24	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	25	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	26	##ADDR##	datatprf	0	#HEAD#	#TAIL#	21
+	27	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	28	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	29	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	30	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	31	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	32	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	33	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	34	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	35	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	36	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	37	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	38	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	39	##ADDR##	datatprf	0	#HEAD#	#TAIL#	21
+	40	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	41	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	42	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	43	##ADDR##	RTEanest	0	#HEAD#	#TAIL#	28
+	44	##ADDR##	RTEassgn	0	#HEAD#	#TAIL#	16
+	45	##ADDR##	RTElitrl	0	#HEAD#	#TAIL#	12
+	46	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	47	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	48	##ADDR##	RTEassgn	0	#HEAD#	#TAIL#	16
+	49	##ADDR##	RTElitrl	0	#HEAD#	#TAIL#	12
+	50	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	51	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	52	##ADDR##	RTEassgn	0	#HEAD#	#TAIL#	16
+	53	##ADDR##	RTElitrl	0	#HEAD#	#TAIL#	12
+	54	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	55	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	56	##ADDR##	RTEassgn	0	#HEAD#	#TAIL#	16
+	57	##ADDR##	RTElitrl	0	#HEAD#	#TAIL#	12
+	58	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	59	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	60	##ADDR##	SPCinvar	0	#HEAD#	#TAIL#	16
+	61	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	62	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	24
+	63	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	64	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	65	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	66	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	67	##ADDR##	SPCinvar	0	#HEAD#	#TAIL#	16
+	68	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	69	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	24
+	70	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	71	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	72	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	73	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	74	##ADDR##	SPCinvar	0	#HEAD#	#TAIL#	16
+	75	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	76	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	24
+	77	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	78	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	79	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	80	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	81	##ADDR##	SPCinvar	0	#HEAD#	#TAIL#	16
+	82	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	83	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	24
+	84	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	85	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	86	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	87	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	88	##ADDR##	SPCinvar	0	#HEAD#	#TAIL#	16
+	89	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	90	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	24
+	91	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	92	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	93	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	94	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	95	##ADDR##	SPCinvar	0	#HEAD#	#TAIL#	16
+	96	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	97	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	24
+	98	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	99	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	100	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	20
+	101	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	102	##ADDR##	footprnt	0	#HEAD#	#TAIL#	954
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  10 instantiation-collections
+  0 sub-namespaces
+  0 definitions
+  0 typedefs
+  Instances:
+    !GND = bool<> !GND
+    !Vdd = bool<> !Vdd
+    a = bool<> a
+    b = bool<> b
+    c = bool<> c
+    d = bool<> d
+    e = bool<> e
+    f = bool<> f
+    x = bool<> x
+    y = bool<> y
+}
+
+top-level spec:
+  $(~(x & y))
+  $(~(a & b))
+  $(~(c & d))
+  $(~(e & f))
+  $(~(x & d))
+  $(~(e & b))
+footprint: {
+  !GND = bool^0 = !GND (1) @[ supply_low ] 
+  !Vdd = bool^0 = !Vdd (2) @[ supply_high ] 
+  a = bool^0 = a (5) @[ atomic loc-def ] 
+  b = bool^0 = b (6) @[ atomic loc-def ] 
+  c = bool^0 = c (7) @[ loc-use ] 
+  d = bool^0 = d (8) @[ loc-use ] 
+  e = bool^0 = e (9) @[ loc-use ] 
+  f = bool^0 = f (10) @[ loc-use ] 
+  x = bool^0 = x (3) @[ atomic loc-def ] 
+  y = bool^0 = y (4) @[ atomic loc-def ] 
+  Created state:
+  bool instance pool: (0 ports, 10 local, 0 mapped)
+  1	!GND @[ supply_low ]	
+  2	!Vdd @[ supply_high ]	
+  3	x @[ atomic loc-def ]	
+  4	y @[ atomic loc-def ]	
+  5	a @[ atomic loc-def ]	
+  6	b @[ atomic loc-def ]	
+  7	c @[ loc-use ]	
+  8	d @[ loc-use ]	
+  9	e @[ loc-use ]	
+  10	f @[ loc-use ]	
+  resolved rte:
+  x = c
+  y = d
+  a = e
+  b = f
+  invariant exprs: 
+  $(~(x & y))
+  $(~(a & b))
+  $(~(c & d))
+  $(~(e & f))
+  $(~(x & d))
+  $(~(e & b))
+}
