@@ -1,0 +1,34 @@
+	0	c : 0
+	0	x : 0	<atomic>
+	0	d : 0
+	0	y : 0	<atomic>
+	0	e : 0
+	0	a : 0	<atomic>
+	0	f : 0
+	0	b : 0	<atomic>
+--------- 
+	0	c : 1
+	0	x : 1	<atomic>
+--------- 
+	0	e : 1
+	0	a : 1	<atomic>
+--------- 
+Warning: invariant violation in [top-level]: (~(x:1 & y:1)<0>) by node y:1
+Warning: invariant violation in [top-level]: (~(c:1 & d:1)<0>) by node d:1
+Warning: invariant violation in [top-level]: (~(x:1 & d:1)<0>) by node d:1
+	0	d : 1
+	0	y : 1	<atomic>
+--------- 
+	0	d : 0
+	0	y : 0	<atomic>
+--------- 
+Warning: invariant violation in [top-level]: (~(a:1 & b:1)<0>) by node b:1
+Warning: invariant violation in [top-level]: (~(e:1 & b:1)<0>) by node b:1
+Warning: invariant violation in [top-level]: (~(e:1 & f:1)<0>) by node f:1
+	0	f : 1
+	0	b : 1	<atomic>
+--------- 
+	0	e : 0
+	0	a : 0	<atomic>
+--------- 
+expect no violations 
